closing render windows during rendering with cycles crashes blender. #36800

Closed
opened 2013-09-23 13:20:32 +02:00 by Alexander N. · 4 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7 64bit, tested on different systems,

- Blender version with error, and version that worked ---

blender-2.68a release ... blender-2.68-r60322-win64.zip - with issue

- Short description of error ---

when i open blender in debug mode,
scene.render.display_mode is set to 'WINDOW',
render an image with cycles
and i close the render window, during rendering is in progress,
blender crashes.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. open blender with option "-d" for debug mode
  2. open the attached blend file
  3. hit [F12]-key, to start rendering
  4. a new render window will open
  5. close that render window during rendering is in progress
  6. you will see, that blender crash.

PS.: open Debug Menu with [Strg]+[Alt]+- [x] and setting Debug Value to "1" does not show that issue.
%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, tested on different systems, - Blender version with error, and version that worked --- blender-2.68a release ... blender-2.68-r60322-win64.zip - with issue - Short description of error --- when i open blender in debug mode, scene.render.display_mode is set to 'WINDOW', render an image with cycles and i close the render window, during rendering is in progress, blender crashes. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. open blender with option "-d" for debug mode 2. open the attached blend file 3. hit [F12]-key, to start rendering 4. a new render window will open 5. close that render window during rendering is in progress 6. you will see, that blender crash. PS.: open Debug Menu with [Strg]+[Alt]+- [x] and setting Debug Value to "1" does not show that issue. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%also on ubuntu 13.04 64bit, blender crashes. (blender-2.68-r60296-linux-glibc211-x86_64.tar.bz2)%%%

%%%also on ubuntu 13.04 64bit, blender crashes. (blender-2.68-r60296-linux-glibc211-x86_64.tar.bz2)%%%

%%%Fix in svn revision 60343, thanks for the report.%%%

%%%Fix in svn revision 60343, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36800
No description provided.