Fix #36800: closing render window during render crashes, the operator would be cancelled before the job, causing invalid access to op->reports in the job thread.